namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: video-feed
  labels:
    name: video-feed  # Optional: Add labels if needed
