video-feed-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: video-feed-ingressroute-tls
  namespace: video-feed
spec:
  entryPoints:
    - websecure
  
  routes:
  - match: Host(`dev.huzaifairfan.com`) || PathPrefix(`/`)
    kind: Rule
    services:
    - name: video-feed-app
      port: 3000
  
  tls:
    certResolver: le  # Typically 'le' or 'letsencrypt' if using default Traefik config
    domains:
      - main: dev.huzaifairfan.com
